[package]
name = "aiur"
description = "Experimental async runtime for Windows"
version = "0.0.1"
authors = ["Vladimir Zvezda"]
edition = "2018"
license = "MIT"
keywords = ["windows", "async", "executor"]
categories = ["asynchronous", "os::windows-apis"]
readme = "README.md"
repository = "https://github.com/vzvezda/aiur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
   "winerror", 
   "winuser", "consoleapi", "winnls", "processenv", "winbase", 
      "sysinfoapi", "synchapi", "impl-default"] }

