[package]
name = "aiur"
description = "Async executor with structured concurrency"
version = "0.0.1"
authors = ["Vladimir Zvezda"]
edition = "2018"
license = "MIT"
keywords = ["windows", "async", "executor"]
categories = ["asynchronous"]
readme = "README.md"
repository = "https://github.com/vzvezda/aiur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
