[package]
name = "aiur"
description = "Single threaded async executor with structured concurrency"
version = "0.0.3"
authors = ["Vladimir Zvezda"]
edition = "2018"
license = "MIT"
keywords = ["async", "executor"]
categories = ["asynchronous"]
readme = "README.md"
repository = "https://github.com/vzvezda/aiur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
